--- a/src/styles/scss/modules/_sections.scss
+++ b/src/styles/scss/modules/_sections.scss
@@ -24,15 +24,15 @@
 .stepbox-text {
 	margin-bottom: 80px;
 }
-.couchexbox {
+.coachexbox {
 	background-color: var(--secondary-paper-color);
 	padding-top: 120px;
 	padding-bottom: 120px;
 }
-.couchexbox-subtitle {
+.coachexbox-subtitle {
 	margin-bottom: 32px;
 }
-.couchexbox-joblist {
+.coachexbox-joblist {
 	width: 100%;
 	height: 544px;
 	margin-bottom: 80px;
