--- a/src/styles/scss/modules/_utils.scss
+++ b/src/styles/scss/modules/_utils.scss
@@ -115,7 +115,7 @@
   }
   
   .w-full {
-	width: 100%;
+	width: 100%
   }
   
   .appearance-none {
@@ -187,4 +187,7 @@
 	.mt-120 {
 	  margin-bottom: 120px;
 	}
+  .md\:w-auto {
+    width: auto;
+  }
   }
