--- a/src/styles/scss/modules/_utils.scss
+++ b/src/styles/scss/modules/_utils.scss
@@ -93,6 +93,14 @@
   .mb-24 {
 	margin-bottom: 24px;
   }
+
+  .mb-48 {
+    margin-bottom: 48px;
+    }
+
+    .mt-24 {
+      margin-top: 24px;
+    }
   
   .mt-120 {
 	margin-bottom: 0;
