--- a/src/styles/scss/modules/_variables.scss
+++ b/src/styles/scss/modules/_variables.scss
@@ -15,6 +15,7 @@
 	--alternate-text-color: #2FBCD1;
 	--grey-text-color: #919EAB;
 	--white-text-color: #FFFFFF;
+	--grey-dark3-theme-color: #D0DFE9;
 	--primary-font-family: 'Barlow', monospace;
 	--secondary-font-family: 'Poppins', monospace;
 	--max-width-container: 1152px;
