--- a/src/styles/scss/modules/_utils.scss
+++ b/src/styles/scss/modules/_utils.scss
@@ -89,6 +89,10 @@
   .p-0 {
 	padding: 0;
   }
+
+  .mb-18 {
+    margin-bottom: 18px;
+  }
   
   .mb-24 {
 	margin-bottom: 24px;
@@ -98,12 +102,20 @@
     margin-bottom: 48px;
     }
 
+    .mt-18 {
+      margin-top: 18px;
+    }
+
     .mt-24 {
       margin-top: 24px;
     }
     
     .mt-60 {
       margin-top: 60px;
+    }
+
+    .mt-80 {
+      margin-top: 80px;
     }
   
   .mt-120 {
