--- a/src/styles/scss/modules/_utils.scss
+++ b/src/styles/scss/modules/_utils.scss
@@ -115,7 +115,7 @@
     }
 
     .mt-80 {
-      margin-top: 80px;
+      margin-top: 0;
     }
   
   .mt-120 {
@@ -226,6 +226,9 @@
 	.mt-120 {
 	  margin-bottom: 120px;
 	}
+  .md\:mt-80 {
+    margin-top: 80px;
+  }
   .md\:w-auto {
     width: auto;
   }
