feat: add detail page

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -3,6 +3,11 @@
 @import "./modules/login";
 @import "./modules/register";
 @import "./modules/avatar.scss";
+@import "./modules/tabs.scss";
+@import "./modules/badge.scss";
+@import "./modules/box.scss";
+@import "./modules/reviews.scss";
+@import "./modules/appointments.scss";
 
 @import "./modules/alerts";
 @import "./modules/animations";
