--- a/src/styles/scss/modules/_typography.scss
+++ b/src/styles/scss/modules/_typography.scss
@@ -70,6 +70,15 @@
     margin-bottom: 0px;
     margin-top:0px;
 }
+.p5{
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 0px;
+    margin-top:0px;
+}
 .caption{
     font-family: 'Poppins';
     font-style: normal;
